<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_item_padding"
        android:paddingTop="@dimen/list_item_padding"
        android:paddingRight="@dimen/list_item_padding"
        android:text="@string/game_log" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_item_padding"
            android:paddingRight="@dimen/list_item_padding"
            android:text="@string/player"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_item_padding"
            android:paddingRight="@dimen/list_item_padding"
            android:text="@string/andro"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/log_list_2d"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </ListView>
        <ListView
            android:id="@+id/log_list_2d_bot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </ListView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_gravity="center"

        android:orientation="vertical">

        <Button
            android:id="@+id/up_btn"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/game_button_up_selector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/left_btn"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:background="@drawable/game_button_left_selector" />

            <Button
                android:id="@+id/right_btn"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:background="@drawable/game_button_right_selector" />

       </LinearLayout>

        <Button
            android:id="@+id/down_btn"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/game_button_down_selector" />
    </LinearLayout>

</LinearLayout>